2013-02-19  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>

	Support Openfirmware disks with non-512B sectors.

	* grub-core/disk/ieee1275/ofdisk.c (grub_ofdisk_open): Get the block
	size of the disk.
	* (grub_ofdisk_get_block_size): New function.
	* (grub_ofdisk_prepare): Use the correct block size.
	* (grub_ofdisk_read): Likewise.
	* (grub_ofdisk_write): Likewise.
	* include/grub/ieee1275/ofdisk.h (grub_ofdisk_get_block_size):
	New proto.

2013-02-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/lsacpi.c: Fix types on 64-bit platform.

2013-02-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/cryptodisk.c (grub_cryptodisk_scan_device): Don't stop
	on first error.

2013-02-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fshelp.c (find_file): Set oldnode to zero after
	freeing it.

2013-02-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement USBDebug (full USB stack variant).

2013-02-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/lsacpi.c: Show more info. Hide some boring parts
	unless they have unexpected values.

2013-02-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/usb.c (grub_usb_device_attach): Add missing
	grub_print_error.

2013-02-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/serial/common.c (grub_usbserial_attach): Fix missing
	zero-out of port structure.

2013-01-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/xfs.c (grub_xfs_read_block): Fix computation in presence
	of extended attributes.

2013-01-27  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub-install.in: change misleading comment about
	device.map creation

2013-01-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_text.c (grub_menu_init_page): Fix behaviour
	when menu highlight color isn't set.

2013-01-27  C. Masloch  <pushbx@38.de>

	Improve FreeDOS direct loading support compatibility.
