@@ -24,5 +24,7 @@
 
 #define GRUB_CMOS_ADDR_REG	0x70
 #define GRUB_CMOS_DATA_REG	0x71
+#define GRUB_CMOS_ADDR_REG_HI	0x72
+#define GRUB_CMOS_DATA_REG_HI	0x73
 
 #endif /* GRUB_CPU_CMOS_H */
