@@ -24,5 +24,7 @@
 
 #define GRUB_CMOS_ADDR_REG	0xb4000070
 #define GRUB_CMOS_DATA_REG	0xb4000071
+#define GRUB_CMOS_ADDR_REG_HI	0xb4000072
+#define GRUB_CMOS_DATA_REG_HI	0xb4000073
 
 #endif /* GRUB_CPU_CMOS_H */
