@@ -1,3 +1,7 @@
+2013-02-24  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	Implement new command cmosdump.
+
 2013-02-19  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>
 
 	Support Openfirmware disks with non-512B sectors.
